[package]
name = "fuzzsnap"
version = "0.1.0"
authors = ["Alexandra Iordache <aghecen@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = ">=0.4"
snapshot = { git = "https://github.com/sandreim/firecracker", branch = "versionize" }
snapshot_derive = { git = "https://github.com/sandreim/firecracker", branch = "versionize" }
